--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Doto", sans-serif;
+    font-family: "Playfair Dispay", sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 20px;
