--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 20px;
-    color:aquamarine;
-background-color: black  
+    color:rgb(239, 240, 240);
+background-color: 
+rgb(234, 168, 221)  
 
 }
   
