--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,7 @@ body {
     margin: 0;
     padding: 20px;
     color:rgb(239, 240, 240);
-background-color: 
-rgb(234, 168, 221)  
+background-color: rgb(234, 168, 221)  
 
 }
   
